--- a/index.html
+++ b/index.html
@@ -8,34 +8,40 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #fdf6f0;
+      background: url('background.jpg') no-repeat center center fixed;
+      background-size: cover;
       margin: 0;
       padding: 0;
       text-align: center;
-      color: #333;
+      color: #fff;
     }
     .container {
       max-width: 600px;
       margin: 0 auto;
       padding: 2rem;
+      background: rgba(0, 0, 0, 0.6);
+      border-radius: 10px;
     }
     h1 {
-      color: #d96d00;
+      font-size: 2.5rem;
+      color: #ffcc00;
+    }
+    p, input, button {
+      font-size: 1.2rem;
     }
     form {
       margin-top: 2rem;
     }
     input[type="text"] {
-      padding: 0.5rem;
-      font-size: 1rem;
+      padding: 0.7rem;
       width: 80%;
       max-width: 300px;
     }
     button {
       margin-top: 1rem;
-      padding: 0.7rem 1.2rem;
-      font-size: 1rem;
-      background-color: #d96d00;
+      padding: 0.8rem 1.5rem;
+      font-size: 1.2rem;
+      background-color: #ff4444;
       color: #fff;
       border: none;
       cursor: pointer;
@@ -46,7 +52,7 @@
     }
     .pix-box {
       margin-top: 2rem;
-      background: #fff3e0;
+      background: rgba(255, 255, 255, 0.2);
       padding: 1.5rem;
       border-radius: 10px;
     }
