--- a/index.html
+++ b/index.html
@@ -14,33 +14,38 @@
       padding: 0;
       text-align: center;
       color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
     }
     .container {
-      max-width: 600px;
-      margin: 0 auto;
-      padding: 2rem;
+      width: 90%;
+      max-width: 400px;
+      padding: 1.5rem;
       background: rgba(0, 0, 0, 0.6);
       border-radius: 10px;
     }
     h1 {
-      font-size: 2.5rem;
+      font-size: 2rem;
       color: #ffcc00;
     }
     p, input, button {
-      font-size: 1.2rem;
+      font-size: 1rem;
     }
     form {
-      margin-top: 2rem;
+      margin-top: 1.5rem;
     }
     input[type="text"] {
-      padding: 0.7rem;
-      width: 80%;
-      max-width: 300px;
+      padding: 0.6rem;
+      width: 100%;
+      max-width: 100%;
+      box-sizing: border-box;
     }
     button {
       margin-top: 1rem;
-      padding: 0.8rem 1.5rem;
-      font-size: 1.2rem;
+      padding: 0.7rem 1.2rem;
+      font-size: 1rem;
       background-color: #ff4444;
       color: #fff;
       border: none;
@@ -51,9 +56,9 @@
       display: none;
     }
     .pix-box {
-      margin-top: 2rem;
+      margin-top: 1.5rem;
       background: rgba(255, 255, 255, 0.2);
-      padding: 1.5rem;
+      padding: 1rem;
       border-radius: 10px;
     }
   </style>
