--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   <div class="container">
     <h1>Convite de Aniversário 🎉</h1>
     <p>Você está convidado para comemorar o aniversário de <strong>Jorge Gabriel</strong>!</p>
-    <p><strong>📅 28 de julho de 2025</strong><br>
+    <p><strong>📅 28 de julho</strong><br>
        <strong>📍 Celebre Recepções</strong></p>
     
     <!-- Contagem regressiva adicionada aqui -->
@@ -157,8 +157,8 @@
     </form>
 
     <div class="pix-box hidden" id="thanksBox">
-      <h2>Obrigado por confirmar! 🎁</h2>
-      <p>Se quiser presentear, o Jorge Gabriel vai adorar receber um PIX 💖</p>
+      <h2>Obrigado por confirmar!</h2>
+      <p>Como sugestão de presente, Jorge Gabriel vai adorar receber um PIX 💖</p>
       <div class="pix-key-container">
         <strong>Chave PIX:</strong>
         <span id="pixKey">0af1eaa1-3d0e-477e-8b47-8baf8f105dc0</span>
