--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
     <h1>Convite de Aniversário 🎉</h1>
     <p>Você está convidado para comemorar o aniversário de <strong>Jorge Gabriel</strong>!</p>
     <p><strong>📅 28 de julho</strong><br>
-       <strong>📍 Celebre Recepções</strong></p>
+       <strong>📍 Celebre Recepções</strong><br>
+       <strong>⏰ 18:00</strong></p> <!-- Linha adicionada aqui -->
     
     <!-- Contagem regressiva adicionada aqui -->
     <div class="countdown">
